bug: recode modal buttons; reduce menu font size & spacing

--- a/assets/sass/vha/components/header/_index.scss
+++ b/assets/sass/vha/components/header/_index.scss
@@ -39,6 +39,20 @@
 }
 
 
+// Reduce padding for extended menu names
+@media (min-width: 64em) {
+    .usa-nav__primary>.usa-nav__primary-item>a {
+        padding: .8rem !important;
+    }
+    .usa-nav__primary button {
+        padding: .8rem !important;
+    }
+}
+
+.usa-nav__primary .usa-accordion__button span {
+    padding-right: 0 !important;
+}
+
 
 @include at-media(mobile) {    
     .usa-nav__primary button {
